comments toegevoegd, andere achtergrond mooiere urls

--- a/public/css/mytheme.css
+++ b/public/css/mytheme.css
@@ -714,7 +714,7 @@ html head + body .ui-body-c.ui-focus {
 html .ui-bar-d .ui-bar-inherit,
 html .ui-body-d .ui-bar-inherit,
 html body .ui-group-theme-d .ui-bar-inherit {
-	background-color: #8cc63f /*{d-bar-background-color}*/;
+	background-image: url('../img/grass.png'); /*{d-bar-background-color}*/;
 	border-color: #4d6c22 /*{d-bar-border}*/;
 	color: #ffffff /*{d-bar-color}*/;
 	text-shadow: 0 /*{d-bar-shadow-x}*/ 1px /*{d-bar-shadow-y}*/ 0 /*{d-bar-shadow-radius}*/ #444444 /*{d-bar-shadow-color}*/;
@@ -728,7 +728,7 @@ html body .ui-group-theme-d .ui-bar-inherit {
 .ui-overlay-d,
 .ui-page-theme-d,
 .ui-page-theme-d .ui-panel-wrapper {
-	background-color: #f2f2f2 /*{d-page-background-color}*/;
+	background-image: url('../img/dirt.png'); /*{d-page-background-color}*/;
 	border-color: #f2f2f2 /*{d-page-border}*/;
 	color: #000000 /*{d-page-color}*/;
 	text-shadow: 0 /*{d-page-shadow-x}*/ 1px /*{d-page-shadow-y}*/ 0 /*{d-page-shadow-radius}*/ #eeeeee /*{d-page-shadow-color}*/;
